--- a/app/plugins/modules/core-support/web/css/text-search.css
+++ b/app/plugins/modules/core-support/web/css/text-search.css
@@ -6,7 +6,7 @@ body.search-bar-is-visible .header .application-icon {
 }
 
 #search-bar {
-    top: 40px;
+    bottom: 0px;
     width: 100%;
     opacity: 0;
     transition: all 150ms ease-in-out;
