fix for tab completion popup positioning
Fixes #74

--- a/app/plugins/modules/core-support/web/css/tab-completion.css
+++ b/app/plugins/modules/core-support/web/css/tab-completion.css
@@ -1,4 +1,5 @@
 .tab-completion-temporary {
+    margin-top: 0.375em;
     display: inline-block;
     background: var(--color-field-01);
     flex-direction: column;
