fix(core-support): reverse-i-search display glitch and keyboard shortcut work
Fixes #81

--- a/app/content/css/ui.css
+++ b/app/content/css/ui.css
@@ -1155,6 +1155,7 @@ code.fancy-code {
     align-items: center;
 }
 .normal-text {
+    color: var(--color-text-01);
     font-weight: 400;
     opacity: 1;
     font-size: 1em;
