fix(webapp): improve text selection and mouse click behavior
Fixes #123

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,8 +43,8 @@
         <div class="application-icon" id="about-button"></div>
 
         <div style='opacity: 0; height: 0; width: 0'>
-          <div class='clickable' id="openwhisk-api-host" title="Your API host. Click to change to another host."></div>
-          <div class='clickable' id="openwhisk-namespace" title="Your currently selected namespace. Click to list your other namespaces."></div>
+          <div class='clickable' id="openwhisk-api-host" title="Your API host. Click to change to another host." style="pointer-events:none"></div>
+          <div class='clickable' id="openwhisk-namespace" title="Your currently selected namespace. Click to list your other namespaces." style="pointer-events:none"></div>
         </div>
 
         <div class='left-tab-stripe-buttons'>
