--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -80,7 +80,7 @@
 	    </div>
 	    <div class="repl-output">
 	      <div class="repl-result"></div>
-              <div class="repl-result-spinner"></div>
+              <div class="repl-result-spinner"><div class="repl-result-spinner-inner"></div></div>
 	    </div>
 	  </div>
 	</div>
