fix(bash-like): pretty-print printenv-like output
Fixes #185

--- a/app/content/css/ui.css
+++ b/app/content/css/ui.css
@@ -1152,6 +1152,12 @@ code.fancy-code {
 .no-wrap {
     white-space: nowrap;
 }
+.normal-wrap {
+    white-space: normal;
+}
+.break-all {
+    word-break: break-all;
+}
 .hide {
     display: none;
 }
