fix(wskflow): change // to /* in wskflow.css
this resolves a webpack build error

Fixes #222

--- a/app/plugins/modules/wskflow/wskflow.css
+++ b/app/plugins/modules/wskflow/wskflow.css
@@ -8,7 +8,7 @@ break {
     flex: 1;
     font-weight: 400;
     position: relative;
-    overflow: hidden; // we will do pan and zoom ourselves
+    overflow: hidden; /* we will do pan and zoom ourselves */
     -webkit-app-region: no-drag;
 }
 #wskflowDiv {
