fix(webpack): fixes for webpack build regressions
missing link-build-assets after recent refactorings

Fixes #259

--- a/packages/app/content/css/themes/kui.css
+++ b/packages/app/content/css/themes/kui.css
@@ -57,6 +57,6 @@ body {
 .application-icon {
     background-image: url('../../icons/svg/kui.svg');
 }
-body.not-electron:not(.webpack-local) .application-icon {
+/* body.not-electron:not(.webpack-local) .application-icon {
     background-image: url('../icons/svg/kui.svg');
-}
+} */
