--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -7,7 +7,7 @@
     <!-- syntax highlighting -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/mono-blue.min.css" rel="stylesheet" type="text/css">
 
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,600" rel="stylesheet" type="text/css">
+    <link href="${fonts}" rel="stylesheet" type="text/css">
 
     <link href="${cssHome}not-electron.css" rel="stylesheet" type="text/css" >
     <link href="${cssHome}ui.css" rel="stylesheet" type="text/css" >
