--- a/packages/kui-builder/examples/build-configs/material-design/css/themes/material.css
+++ b/packages/kui-builder/examples/build-configs/material-design/css/themes/material.css
@@ -1,29 +1,30 @@
 /* color variables */
 body {
     --color-hover-primary-text: #294c86;
-    --color-content-divider: #4173AF;
+    --color-content-divider: #40C4FF;
     --color-tag-beta-fill: #dfe3e6;
     --color-tag-beta-text: #394b54;
     --color-tag-ibm-fill: #c0e6ff;
     --color-tag-ibm-text: #325c80;
-    --color-stripe-01: green; /* 202 60 21 */
-    --color-stripe-02: olive; /* 205 67 18 */
-    --color-text-01: #152934;
-    --color-text-02: #5a6872;
-    --color-support-01: #e71d32;
-    --color-support-02: #5aa700;
+    --color-stripe-01: #263238;
+    --color-stripe-02: #37474F;
+    --color-text-01: #263238;
+    --color-text-02: #37474F;
+    --color-support-01: #F44336;
+    --color-support-01-lighter: rgba(244, 67, 54, 0.8);
+    --color-support-02: #00C853;
     --color-support-03: #efc100;
     --color-support-03-darker: hsl(48, 100%, 38%);  /* dialed down from 47% lightness */
     --color-support-04: #5aaafa;
     --color-brand-01: #3d70b2;
     --color-brand-01-10: hsla(214, 49%, 47%, 0.1); /* 10% opacity */
-    --color-brand-02: #5596e6;
+    --color-brand-02: #03A9F4;
     --color-brand-03: #00b4a0;
-    --color-ui-01: #fff; /* 216 0 100 8 */
-    --color-ui-02: #f5f7fa; /* 216 2 98 */
-    --color-ui-03: #f0f3f6; /* 210 2 96 */
-    --color-ui-04: #dfe3e6; /* 206 3 90 */
-    --color-ui-05: #8c9ba5; /* 204 15 65 */
+    --color-ui-01: #fff;
+    --color-ui-02: #ECEFF1;
+    --color-ui-03: #E1F5FE;
+    --color-ui-04: #CFD8DC;
+    --color-ui-05: #546E7A;
 
     --color-ok: var(--color-support-02);
     --color-ok-lighter: rgba(97, 164, 38, 0.75); /* support-02 at reduced alpha */
@@ -44,7 +45,7 @@ body {
     --font-sans-serif: "IBM Plex Sans", sans-serif;
     --font-monospace: "IBM Plex Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier,monospace;
 
-    --color-tab-01: #666666;
+    --color-tab-01: #E1F5FE;
     --color-tab-02: #fdc086;
     --color-tab-03: #386cb0;
     --color-tab-04: #7fc97f;
@@ -52,6 +53,23 @@ body {
     --color-tab-06: #beaed4;
     --color-tab-07: #f0027f;
     --color-tab-08: #bf5b17;
+}
+
+.log-field.deemphasize {
+    font-weight: 400;
+}
+
+.new-tab-button.left-tab-stripe-button i {
+    color: var(--color-ui-02) !important;
+    opacity: 0.25;
+}
+
+#help-button i {
+    color: var(--color-ui-04);
+}
+
+.left-tab-stripe-button-label {
+    color: var(--color-ui-04);
 }
 
 .application-icon {
