--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -5,14 +5,13 @@
     <title>${productTitle}</title>
 
     <!-- syntax highlighting -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/mono-blue.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/${highlightTheme}.min.css" rel="stylesheet" type="text/css">
 
     <link href="${fonts}" rel="stylesheet" type="text/css">
 
     <link href="${cssHome}not-electron.css" rel="stylesheet" type="text/css" >
     <link href="${cssHome}ui.css" rel="stylesheet" type="text/css" >
     <link href="${cssHome}left-tab-stripe.css" rel="stylesheet" type="text/css" >
-    <link href="${cssHome}themes/${cssTheme}" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
@@ -56,7 +55,10 @@
         <div class='left-tab-stripe-button new-tab-button' id='new-tab-button'>
           <i class='fas fa-plus-square repl-prompt-right-element-icon deemphasize'></i>
         </div>
-        <div id='help-button'>
+        <div class='left-tab-stripe-button theme-button smaller-button' id='theme-button'>
+          <i class='fas fa-palette'></i>
+        </div>
+        <div class='left-tab-stripe-button smaller-button' id='help-button'>
           <i class='fas fa-question-circle'></i>
         </div>
       </div>
