test(plugins/plugin-k8s): add kubectl get tab switching tests
Fixes #520

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1187,6 +1187,9 @@ code.fancy-code {
 .smaller-text {
     font-size: 0.875em;
 }
+.somewhat-smaller-text {
+    font-size: 0.925em;
+}
 .sub-text {
     color: var(--color-text-02);
 }
