fix(plugins/plugin-bash-like): improve markdown rendering
also some minor dark mode tweaks for markdown rendering

Fixes #159

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -189,7 +189,7 @@
         <!-- sidecar bottom stripe -->
         <div class='sidecar-bottom-stripe zoomable'>
           <div class='sidecar-bottom-stripe-left-bits'>
-            <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container sidecar-bottom-stripe-button'>
+            <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container'>
               <div class='sidecar-bottom-stripe-button'>
                 <div class='graphical-icon'><i class='fas fa-angle-double-left'></i></div>
                 <div class='sidecar-bottom-stripe-back-inner-bits'></div>
