--- a/plugins/plugin-editor/web/css/tomorrow-night.css
+++ b/plugins/plugin-editor/web/css/tomorrow-night.css
@@ -5,14 +5,14 @@
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #eaeef3;
+  background: var(--color-ui-02);
 }
 body[kui-theme="dark"] .monaco-editor {
     background: transparent;
 }
 
 .monaco-editor {
-  color: #00193a;
+    color: var(--color-text-01);
 }
 
 .monaco-editor .current-line ~ .line-numbers {
@@ -50,10 +50,6 @@ body[kui-theme="dark"] .monaco-editor {
 
 .monaco-editor .mti20,
 .monaco-editor .comment {
-  color: #738191;
-}
-body[kui-theme="dark"] .monaco-editor .mti20,
-body[kui-theme="dark"] .monaco-editor .comment {
     color: #969896;
 }
 
@@ -71,23 +67,7 @@ body[kui-theme="dark"] .monaco-editor .comment {
 .monaco-editor .name,
 .monaco-editor .selector-id,
 .monaco-editor .selector-class {
-  color: #0048ab;
-}
-body[kui-theme="dark"] .monaco-editor .mtk20,
-body[kui-theme="dark"] .monaco-editor .mtk7,
-body[kui-theme="dark"] .monaco-editor .string,
-body[kui-theme="dark"] .monaco-editor .title,
-body[kui-theme="dark"] .monaco-editor .section,
-body[kui-theme="dark"] .monaco-editor .built_in,
-body[kui-theme="dark"] .monaco-editor .literal,
-body[kui-theme="dark"] .monaco-editor .type,
-body[kui-theme="dark"] .monaco-editor .addition,
-body[kui-theme="dark"] .monaco-editor .tag,
-body[kui-theme="dark"] .monaco-editor .quote,
-body[kui-theme="dark"] .monaco-editor .name,
-body[kui-theme="dark"] .monaco-editor .selector-id,
-body[kui-theme="dark"] .monaco-editor .selector-class {
-    color: #cc6666
+    color: #81a2be;
 }
 
 .monaco-editor .meta,
@@ -100,19 +80,7 @@ body[kui-theme="dark"] .monaco-editor .selector-class {
 .monaco-editor .template-variable,
 .monaco-editor .link,
 .monaco-editor .bullet {
-  color: #4c81c9;
-}
-body[kui-theme="dark"] .monaco-editor .meta,
-body[kui-theme="dark"] .monaco-editor .subst,
-body[kui-theme="dark"] .monaco-editor .symbol,
-body[kui-theme="dark"] .monaco-editor .regexp,
-body[kui-theme="dark"] .monaco-editor .attribute,
-body[kui-theme="dark"] .monaco-editor .deletion,
-body[kui-theme="dark"] .monaco-editor .variable,
-body[kui-theme="dark"] .monaco-editor .template-variable,
-body[kui-theme="dark"] .monaco-editor .link,
-body[kui-theme="dark"] .monaco-editor .bullet {
-    color: de935f
+    color: #969896;
 }
 
 .monaco-editor .emphasis {
